# envkeep

./: Cargo.toml  README.md  hosto-frontend-copy.envvault  install.ps1  install.sh
.github/workflows/: release.yml
src/: env_parser.rs  errors.rs  main.rs
src/cli/: add.rs  add_auto.rs  backup.rs  diff.rs  export.rs  generate.rs  import.rs  init.rs  inspect.rs  list.rs  migrate.rs  mod.rs  recent.rs  remove.rs  restore.rs  search.rs  secrets.rs  status.rs  sync.rs  types.rs  unused.rs  use_project.rs  validate.rs
src/crypto/: key.rs  mod.rs
src/vault/: mod.rs  project.rs  secret.rs  variable.rs
